# bc_cvrp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGUROBI.cmake  cmake_config.hpp.in
include/: config_parameters.hpp  init_grb_model.hpp  instance.hpp  vrp_lp.hpp
include/callback/: callback_sec.hpp
include/ext/cvrpsep/: basegrph.h  blocks.h  capsep.h  cnstrmgr.h  compcuts.h  compress.h  cutbase.h  fcapfix.h  grsearch.h  memmod.h  mxf.h  sort.h  strngcmp.h
include/utils/: .gitignore  constants.hpp  helper.hpp  multi_vector.hpp
input/: .gitignore  E-n13-k4.vrp  example.cfg
src/: config_parameters.cpp  init_grb_model.cpp  instance.cpp  main.cpp  vrp_lp.cpp
src/callback/: callback_sec.cpp
src/callback/cuts/: cvrpsep.cpp
src/ext/cvrpsep/: basegrph.cpp  blocks.cpp  capsep.cpp  cnstrmgr.cpp  compcuts.cpp  compress.cpp  cutbase.cpp  fcapfix.cpp  grsearch.cpp  memmod.cpp  mxf.cpp  sort.cpp  strngcmp.cpp
src/ext/loguru/: loguru.cpp
src/utils/: helper.cpp
